[package]
name = "fellowship"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "1.18.11"
solana-program = "1.18.11"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
bs58 = "0.5"
base64 = "0.21"
dotenv = "0.15"
